==> DuyPham2303/RFID-System-refactor-/Source/Legacy_Code/Bsw/rc522/rc522.c <==
#include "PinCfg.h"
#include "rc522.h"
#include "Systick.h"
#include "stm32f1_spl_spi.h"

void MFRC522_Init(void)
{
	// cau hinh gpio
	GPIO_InitTypeDef rc522_PinInit;
	// Cai dat MISO,MOSI,SCK pin cho RC522
	rc522_PinInit.GPIO_Pin = MOSI_PIN | MISO_PIN | SCK_PIN;
	rc522_PinInit.GPIO_Mode = GPIO_Mode_AF_PP;
	rc522_PinInit.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(SPI_PORT, &rc522_PinInit);

	// cai dat reset pin cho rc522
	rc522_PinInit.GPIO_Pin = RC522_RST_PIN;
	rc522_PinInit.GPIO_Mode = GPIO_Mode_Out_PP;
	rc522_PinInit.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(RC522_RST_PORT, &rc522_PinInit);

	// cai dat cs pin cho rc522
	rc522_PinInit.GPIO_Pin = RC522_CS_PIN;
	rc522_PinInit.GPIO_Mode = GPIO_Mode_Out_PP;
	rc522_PinInit.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(SPI_PORT, &rc522_PinInit);

	// cau hinh spi
	rc522_spiInit.pSPIx = HSPI1;
	rc522_spiInit.Config.SPI_Mode = SPI_Mode_Master;
	rc522_spiInit.Config.SPI_NSS = SPI_NSS_Soft;
	rc522_spiInit.Config.SPI_FirstBit = SPI_FirstBit_MSB;
	rc522_spiInit.Config.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	rc522_spiInit.Config.SPI_DataSize = SPI_DataSize_8b;
	rc522_spiInit.Config.SPI_CPOL = SPI_CPOL_Low;
	rc522_spiInit.Config.SPI_CPHA = SPI_CPHA_1Edge;
	rc522_spiInit.Config.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256;
	SPI_Init(HSPI1, &rc522_spiInit.Config);
	SPI_Cmd(HSPI1, ENABLE);

	/*SET UP RC522*/
	// pull CS to high -> no slave deteced
	GPIO_WriteBit(SPI_PORT, RC522_CS_PIN, Bit_SET);
	GPIO_WriteBit(RC522_RST_PORT, RC522_RST_PIN, Bit_SET);
	MFRC522_Reset();

	// Timer: TPrescaler*TreloadVal/6.78MHz = 24ms

	while (Read_MFRC522(TModeReg) != 0x8D)
	{
		Write_MFRC522(TModeReg, 0x8D); // Tauto=1; f(Timer) = 6.78MHz/TPreScaler
	}
	while (Read_MFRC522(TPrescalerReg) != 0x3E)
	{
		Write_MFRC522(TPrescalerReg, 0x3E); // TModeReg[3..0] + TPrescalerReg
	}
	while (Read_MFRC522(TReloadRegL) != 30)
	{
		Write_MFRC522(TReloadRegL, 30);
	}
	while (Read_MFRC522(TReloadRegH) != 0x0)
	{
		Write_MFRC522(TReloadRegH, 0);
	}
	while (Read_MFRC522(TxAutoReg) != 0x40)
	{
		Write_MFRC522(TxAutoReg, 0x40); // force 100% ASK modulation
	}
	while (Read_MFRC522(ModeReg) != 0x3D)
	{
		Write_MFRC522(ModeReg, 0x3D); // CRC Initial value 0x6363
	}
	// check whether the register has been written correctly
	while (AntennaOn() != SUCCESS)
		;
	pass++;
}

static uchar RC522_SPI_Transfer(uchar data_tx)
{
	uchar rx_data;
	SPL_SPI_TxRx(&rc522_spiInit, &data_tx, &rx_data, sizeof(data_tx));
	return rx_data;
}

static void Write_MFRC522(uchar addr, uchar val)
{
	/* CS LOW */
	GPIO_WriteBit(SPI_PORT, RC522_CS_PIN, Bit_RESET);

	// even though we are calling transfer frame once, we are really sending
	// two 8-bit frames smooshed together-- sending two 8 bit frames back to back
	// results in a spike in the select line which will jack with transactions
	// - top 8 bits are the address. Per the spec, we shift the address left
	//   1 bit, clear the LSb, and clear the MSb to indicate a write
	// - bottom 8 bits are the data bits being sent for that address, we send them
	RC522_SPI_Transfer((addr << 1) & 0x7E);
	RC522_SPI_Transfer(val);

	/* CS HIGH */
	GPIO_WriteBit(SPI_PORT, RC522_CS_PIN, Bit_SET);
}

static uchar Read_MFRC522(uchar addr)
{
	uchar val;

	/* CS LOW */
	GPIO_WriteBit(SPI_PORT, RC522_CS_PIN, Bit_RESET);

	// even though we are calling transfer frame once, we are really sending
	// two 8-bit frames smooshed together-- sending two 8 bit frames back to back
	// results in a spike in the select line which will jack with transactions
	// - top 8 bits are the address. Per the spec, we shift the address left
	//   1 bit, clear the LSb, and set the MSb to indicate a read
	// - bottom 8 bits are all 0s on a read per 8.1.2.1 Table 6
	RC522_SPI_Transfer(((addr << 1) & 0x7E) | 0x80);
	val = RC522_SPI_Transfer(0x00);

	/* CS HIGH */
	GPIO_WriteBit(SPI_PORT, RC522_CS_PIN, Bit_SET);

	return val;
}
